--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Hi</h1>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
         <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+        <script src="/static/index.js"></script>
     </body>
 </html>
