[feat] draw out the first chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Hi</h1>
+        <div class="ct-chart ct-perfect-fourth"></div>
         <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+        <script src="/static/index.js"></script>
     </body>
 </html>
