--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,31 @@
 
 <html>
     <head>
+        <title>Graphing a time series</title>
         <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel="stylesheet" href="/static/index.css">
+
     </head>
     <body>
-        <h1>Hi</h1>
-        <div class="ct-chart ct-perfect-fourth"></div>
+        <div class="container">
+            <h1>Graphing with Chartist</h1>
+            <div class="charts">
+                <div class="control">
+                    <div class="control-date">
+                        <h3>Time Frame</h3>
+                        <br />
+                        <input type="number" value="2004" min="2004" max="2017">
+                        <p>to</p>
+                        <input type="number" value="2005" min="2004" max="2017">
+                    </div>
+                </div>
+                <div class="chart">
+                    <div class="ct-chart ct-perfect-fourth"></div>
+                </div>
+
+            </div>
+        </div>
         <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
         <script src="/static/index.js"></script>
