--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,14 @@
                         <p>to</p>
                         <input class="underlined-input" type="number" value="2005" min="2004" max="2017">
                     </div>
+                    <h3>Selected columns</h3>
+                    <div class="control-column">
+                        <ul>
+                            <li>Worldwide</li>
+                            <li>Gym</li>
+                            <li>Finance</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="chart">
                     <div class="ct-chart ct-perfect-fourth"></div>
