[feat] add update chart button

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
                             <li>Finance</li>
                         </ul>
                     </div>
+                    <div class="control-button">
+                        <input type="button" onclick="updateChart()" value="Update chart">
+                    </div>
                 </div>
                 <div class="chart">
                     <div class="ct-chart ct-perfect-fourth"></div>
