--- a/static/index.css
+++ b/static/index.css
@@ -84,3 +84,24 @@
     height: 15px;
     width: 7px;
 }
+
+.control-button {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.control-button > input {
+    width: 100px;
+    height: 30px;
+    border: none;
+    background-color: #eee;
+}
+
+.control-button > input:hover {
+    cursor: pointer;
+    background: #ddd;
+}
+
+.control-button > input:active {
+    background: #888;
+}
