[feat] pull data from the backend to update the chart

--- a/static/index.css
+++ b/static/index.css
@@ -105,3 +105,35 @@
 .control-button > input:active {
     background: #888;
 }
+
+.ct-series-a .ct-line,
+.ct-series-a .ct-point {
+    stroke: blue;
+}
+
+.ct-series-a .ct-line,
+.ct-series-a .ct-point {
+    stroke: red;
+}
+
+.ct-legend {
+    display: flex;
+    list-style-type: none;
+}
+
+.ct-legend li {
+    position: relative;
+    padding-left: 23px;
+    margin-bottom: 3px;
+}
+
+.ct-legend li:before {
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    left: 0;
+    content: '';
+    border: 3px solid transparent;
+    border-raduis: 2px;
+}
+
