--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,18 @@
                     <h3>Selected columns</h3>
                     <div class="control-column">
                         <ul>
-                            <li>Worldwide</li>
-                            <li>Gym</li>
-                            <li>Finance</li>
+                            <li>
+                                <div class="series-a"></div>
+                                Diet
+                            </li>
+                            <li>
+                                <div class="series-b"></div>
+                                Gym
+                            </li>
+                            <li>
+                                <div class="series-c"></div>
+                                Finance
+                            </li>
                         </ul>
                     </div>
                     <div class="control-button">
@@ -33,6 +42,11 @@
                     </div>
                 </div>
                 <div class="chart">
+                    <ul class="ct-legend">
+                        <li>Diet</li>
+                        <li>Gym</li>
+                        <li>Finance</li>
+                    </ul>
                     <div class="ct-chart ct-perfect-fourth"></div>
                 </div>
 
