[fix] fix for macos

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,15 +24,12 @@
                     <div class="control-column">
                         <ul>
                             <li>
-                                <div class="series-a"></div>
                                 Diet
                             </li>
                             <li>
-                                <div class="series-b"></div>
                                 Gym
                             </li>
                             <li>
-                                <div class="series-c"></div>
                                 Finance
                             </li>
                         </ul>
@@ -43,8 +40,8 @@
                 </div>
                 <div class="chart">
                     <ul class="ct-legend">
-                        <li>Diet</li>
-                        <li>Gym</li>
+                        <li class="selected">Diet</li>
+                        <li class="selected">Gym</li>
                         <li>Finance</li>
                     </ul>
                     <div class="ct-chart ct-perfect-fourth"></div>
