--- a/templates/index.html
+++ b/templates/index.html
@@ -23,14 +23,17 @@
                     <h3>Selected columns</h3>
                     <div class="control-column">
                         <ul>
-                            <li>
+                            <li class="control-column-item checked">
                                 Diet
+                                <input type="color" value="#0140BA"/>
                             </li>
-                            <li>
+                            <li class="control-column-item checked">
                                 Gym
+                                <input type="color" value="#01FF04"/>
                             </li>
-                            <li>
+                            <li class="control-column-item">
                                 Finance
+                                <input type="color" value="#F3F6C3"/>
                             </li>
                         </ul>
                     </div>
@@ -39,11 +42,6 @@
                     </div>
                 </div>
                 <div class="chart">
-                    <ul class="ct-legend">
-                        <li class="selected">Diet</li>
-                        <li class="selected">Gym</li>
-                        <li>Finance</li>
-                    </ul>
                     <div class="ct-chart ct-perfect-fourth"></div>
                 </div>
 
