--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,11 @@
         <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel="stylesheet" href="/static/index.css">
-
     </head>
     <body>
         <div class="container">
             <h1>Graphing with Chartist</h1>
-            <div class="charts">
+            <div class="data-area">
                 <div class="control">
                     
                     <h3>Time Frame</h3>
@@ -52,3 +51,4 @@
         <script src="/static/index.js"></script>
     </body>
 </html>
+
